assets/css/themes.scss
// Bright / Fallback
:root {
    color-scheme: light;
    --color-bg: #ffffff;
    --color-bg-offset: #fff6f6;
    --color-text: #313436;
    --color-text-offset: #777f86;
    --color-border: #eceeef;
    --color-primary: #E2001A;
    --color-primary-offset: #a71a3b;
    --color-secondary: #21A8A3;
}

@media (prefers-color-scheme: light),
(prefers-color-scheme: no-preference) {
    :root {
        color-scheme: light;
        --color-bg: #ffffff;
        --color-bg-offset: #fff6f6;
        --color-text: #313436;
        --color-text-offset: #777f86;
        --color-border: #eceeef;
        --color-primary: #E2001A;
        --color-primary-offset: #a71a3b;
        --color-secondary: #21A8A3;
    }
}

@media (prefers-color-scheme: dark) {
    :root {
        color-scheme: dark;
        --color-bg: #0e141b;
        --color-bg-offset: #252526;
        --color-text: #ffffff;
        --color-text-offset: #818a91;
        --color-border: #2d2d2d;
        --color-primary: #E2001A;
        --color-primary-offset: #ff2957;
        --color-secondary: #21A8A3;
    }
}

[data-theme='default'] {
    --color-bg: #ffffff;
    --color-bg-offset: #fff6f6;
    --color-text: #313436;
    --color-text-offset: #777f86;
    --color-border: #eceeef;
    --color-primary: #E2001A;
    --color-primary-offset: #a71a3b;
    --color-secondary: #21A8A3;
}

// Dark
[data-theme='dark'] {
    --color-bg: #0e141b;
    --color-bg-offset: #252526;
    --color-text: #ffffff;
    --color-text-offset: #818a91;
    --color-border: #2d2d2d;
    --color-primary: #E2001A;
    --color-primary-offset: #ff2957;
    --color-secondary: #21A8A3;
}

// Coastal Mirage
[data-theme='coastal'] {
    --color-bg: #fffffe;
    --color-bg-offset: #e3f6f5;
    --color-text: #272343;
    --color-text-offset: #2d334a;
    --color-border: #e3f6f5;
    --color-primary: #ff9d00;
    --color-primary-offset: #ffca00;
    --color-secondary: #bae8e8;
}

// Cocoa Elegance
[data-theme='cocoa'] {
    --color-bg: #55423d;
    --color-bg-offset: #41312E;
    --color-text: #fffffe;
    --color-text-offset: #ffc0ad;
    --color-border: #271c19;
    --color-primary: #f3ab87;
    --color-primary-offset: #ffc0ad;
    --color-secondary: #e78fb3;
}

// Sunkissed Dreams
[data-theme='sunkissed'] {
    --color-bg: #fef6e4;
    --color-bg-offset: #f3e1d8;
    --color-text: #172c66;
    --color-text-offset: #006e8a;
    --color-border: #f3d2c1;
    --color-primary: #f582ae;
    --color-primary-offset: #ff3d6a;
    --color-secondary: #8bd3dd;
}

// Cosmic Enigma
[data-theme='cosmic'] {
    --color-bg: #16161a;
    --color-bg-offset: #29293e;
    --color-text: #fffffe;
    --color-text-offset: #94a1b2;
    --color-border: #383a61;
    --color-primary: #7f5af0;
    --color-primary-offset: #e068fd;
    --color-secondary: #2cb67d;
}

// Spring Grove
[data-theme='spring'] {
    --color-bg: #fafbf5;
    --color-bg-offset: #f2ede9;
    --color-text: #41474C;
    --color-text-offset: #757D84;
    --color-border: #e8e0d9;
    --color-primary: #99C221;
    --color-primary-offset: #6E910A;
    --color-secondary: #E55812;
}

// Rainbow Road
[data-theme='rainbow'] {
    --color-bg: #140527;
    --color-bg-offset: #311b46;
    --color-text: #feff00;
    --color-text-offset: #ff464d;
    --color-border: #d846ff;
    --color-primary: #49f5f7;
    --color-primary-offset: #5dccf8;
    --color-secondary: #01c317;
    cursor: url("/assets/img/rainbow-cursor-32.png"), auto !important;

    * {
        cursor: url("/assets/img/rainbow-cursor-32.png"), auto !important;
    }

    body {
        background-image: url("/assets/img/stars.gif");
        text-shadow: 0 0 2px;
    }

    .card .card-link {
        * {
            text-shadow: none !important;
        }
    }

    pre,
    code {
        text-shadow: none !important;
    }
}


// Lobster Life
[data-theme='lobster'] {
    --color-bg: #fcddd4;
    --color-bg-offset: #ffb9ad;
    --color-text: #4b1313;
    --color-text-offset: #146caa;
    --color-border: #f1797c;
    --color-primary: #b62b2b;
    --color-primary-offset: #FF0030;
    --color-secondary: #fb9f13;
}

// Hacker News
[data-theme='hackernews'] {
    --color-bg: #F6F6EF;
    --color-bg-offset: #F8F8EC;
    --color-text: #000000;
    --color-text-offset: #828282;
    --color-border: #FF6600;
    --color-primary: #FF6600;
    --color-primary-offset: #F56200;
    --color-secondary: #FF6600;
}

// Colored Glass
[data-theme='glass'] {
    --color-bg: #19191a;
    --color-bg-offset: #313128;
    --color-text: #F6F6EF;
    --color-text-offset: #54455d;
    --color-border: #d7d7d7;
    --color-primary: #32087a;
    --color-primary-offset: #a428da;
    --color-secondary: #3febf0;

    body {
        background: url("/assets/img/bg.jpg") center / cover no-repeat fixed;
        text-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
    }

    #theme-toggle {
        background: var(--color-text);
    }

    .card .card-link {
        border: none;
        border-radius: 20px;
        background-color: rgba(255, 255, 255, 0.45);
        box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
        backdrop-filter: blur(15px);

        * {
            text-shadow: none !important;
        }
    }

    .card .card-link .card-footer .card-date {
        color: var(--color-bg);
    }
}

